# convcnp-assim-nz

./: .env_template  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: data_api.md  era5_loader.md  experiments.md  notebooks.md  pixi.md  scripts.md  tensorboard.md  todo.md  update-feb-2026
era5_samples/: era5_temperature_1000.yaml  experiment_1_data.yaml
notebooks/debug/: gpu_memory.ipynb
notebooks/eda/: era5.ipynb  netCDF_visualise.ipynb  nzra-sat.ipynb
notebooks/experiment1/: exp1_temperature_ConvCNP.ipynb
notebooks/experiment2/: exp2_adding_channels.ipynb  exp2_transfer_learning_base.ipynb
notebooks/experiment3/: exp3_missing_data.ipynb
notebooks/experiment4/: exp4_nzra_model.ipynb  experiment4_nzra_target.ipynb  gpu_test.py
notebooks/experiment5/: experiment5-custom-unet.ipynb  experiment5_nzra_diff.ipynb  experiment5_stations_nzra_eda.ipynb  experiment5_stations_target.ipynb
notebooks/experiments/: exp1_temperature_ConvCNP.ipynb  exp2_transfer_learning.ipynb
scripts/: myfirstscript.pbs  run_notebook_nohup.sh  test_script.pbs  torchrun_nb_exec.py
scripts/notebooks/: experiment_4.sh  experiment_4_datagen.sh  experiment_4_train.sh  experiment_5_datagen.sh  experiment_5_train.sh  gpu_test.sh
scripts/utils/: clear_datasets.sh  run_era5_processor.sh  run_himawari8_processor.sh  start_tensorboard.sh
src/config/: env_loader.py  logging_config.py
src/data_processing/: era5_processor.py  himawari8_processor.py  ifs_processor.py  nzra_processor.py  processor.py  station_processor.py  topography_processor.py  (+1 more)
(+45 files in other folders)
