[project]
dependencies = ["deepsensor>=0.4.2,<0.5"]
name = "convcnp-assim-nz"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
convcnp_assim_nz = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pipreqs = ">=0.4.13,<0.5"
cdsapi = ">=0.7.7,<0.8"
dask = ">=2025.12.0,<2026"
numpy = ">=2.3.5,<3"
pandas = ">=2.3.3,<3"
python-dotenv = ">=1.2.1,<2"
pyyaml = ">=6.0.3,<7"
scipy = ">=1.16.3,<2"
pytorch = ">=2.9.1,<3"
tqdm = ">=4.67.1,<5"
xarray = ">=2025.12.0,<2026"
zarr = ">=3.1.5,<4"
bottleneck = ">=1.6.0,<2"
netcdf4 = ">=1.7.3,<2"
h5netcdf = ">=1.7.3,<2"
tensorboard = ">=2.20.0,<3"
jupyterlab = ">=4.5.0,<5"
ipykernel = ">=7.1.0,<8"
matplotlib = ">=3.10.8,<4"
basemap = ">=2.0.0,<3"
cartopy = ">=0.25.0,<0.26"
kerchunk = ">=0.2.9,<0.3"
